--- a/MVGBar/Base.lproj/Main.storyboard
+++ b/MVGBar/Base.lproj/Main.storyboard
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11134"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14113"/>
+        <capability name="box content view" minToolsVersion="7.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -673,45 +675,80 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="MVGBar" customModuleProvider="target"/>
                 <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <customObject id="FXi-uX-EwT" customClass="StatusMenuController" customModule="MVGBar" customModuleProvider="target">
+                    <connections>
+                        <outlet property="departureItem" destination="qih-6v-teL" id="xW3-HM-pAt"/>
+                        <outlet property="menuBarView" destination="Kvk-b4-wfh" id="5kG-sy-mUV"/>
+                        <outlet property="statusMenu" destination="s8g-Cs-rMd" id="dmI-tJ-I9z"/>
+                    </connections>
+                </customObject>
+                <menu id="s8g-Cs-rMd">
+                    <items>
+                        <menuItem title="Update" keyEquivalent="u" id="J54-6D-RkG">
+                            <connections>
+                                <action selector="updateClicked:" target="FXi-uX-EwT" id="Cqm-HW-ek9"/>
+                            </connections>
+                        </menuItem>
+                        <menuItem title="Item" id="qih-6v-teL">
+                            <modifierMask key="keyEquivalentModifierMask"/>
+                        </menuItem>
+                        <menuItem title="Preferences" keyEquivalent="/" id="hV8-sD-Q6B"/>
+                        <menuItem isSeparatorItem="YES" id="V03-97-NDd"/>
+                        <menuItem title="Quit" keyEquivalent="q" id="ysu-bX-Cxx">
+                            <connections>
+                                <action selector="quitClick:" target="FXi-uX-EwT" id="S2Y-W9-erh"/>
+                            </connections>
+                        </menuItem>
+                    </items>
+                </menu>
+                <customView id="Kvk-b4-wfh" customClass="DepartureView" customModule="MVGBar" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="0.0" width="200" height="80"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <subviews>
+                        <box autoresizesSubviews="NO" borderType="none" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="7FJ-LO-OQD">
+                            <rect key="frame" x="-3" y="-4" width="206" height="86"/>
+                            <view key="contentView" id="BQF-PD-GJS">
+                                <rect key="frame" x="0.0" y="0.0" width="206" height="86"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hxN-Qa-Uhf">
+                                        <rect key="frame" x="20" y="36" width="14" height="14"/>
+                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="ic_train" id="THf-ok-OWs"/>
+                                    </imageView>
+                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="KGC-db-4bQ">
+                                        <rect key="frame" x="50" y="27" width="131" height="34"/>
+                                        <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="right" title="in 13m sdfgsdg sdfg sg sdfg " id="oxa-A1-DNd">
+                                            <font key="font" metaFont="system"/>
+                                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                        </textFieldCell>
+                                    </textField>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="hxN-Qa-Uhf" firstAttribute="leading" secondItem="BQF-PD-GJS" secondAttribute="leading" constant="20" id="1pM-5m-LrD"/>
+                                    <constraint firstItem="hxN-Qa-Uhf" firstAttribute="centerY" secondItem="BQF-PD-GJS" secondAttribute="centerY" id="5cQ-IW-QsM"/>
+                                    <constraint firstItem="KGC-db-4bQ" firstAttribute="leading" secondItem="hxN-Qa-Uhf" secondAttribute="trailing" constant="18" id="S7C-xa-IWK"/>
+                                    <constraint firstItem="KGC-db-4bQ" firstAttribute="centerY" secondItem="hxN-Qa-Uhf" secondAttribute="centerY" id="XVz-s6-fVM"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="KGC-db-4bQ" secondAttribute="trailing" constant="4" id="wkR-XU-XOs"/>
+                                </constraints>
+                            </view>
+                        </box>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="7FJ-LO-OQD" firstAttribute="leading" secondItem="Kvk-b4-wfh" secondAttribute="leading" id="2yp-hR-S6V"/>
+                        <constraint firstAttribute="bottom" secondItem="7FJ-LO-OQD" secondAttribute="bottom" id="DiB-jo-Rvt"/>
+                        <constraint firstAttribute="trailing" secondItem="7FJ-LO-OQD" secondAttribute="trailing" id="H9j-m0-qyU"/>
+                        <constraint firstItem="7FJ-LO-OQD" firstAttribute="top" secondItem="Kvk-b4-wfh" secondAttribute="top" id="Xid-8h-tYq"/>
+                    </constraints>
+                </customView>
             </objects>
             <point key="canvasLocation" x="75" y="0.0"/>
         </scene>
-        <!--Window Controller-->
-        <scene sceneID="R2V-B0-nI4">
-            <objects>
-                <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
-                    <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
-                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
-                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="196" y="240" width="480" height="270"/>
-                        <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
-			<connections>
-                            <outlet property="delegate" destination="B8D-0N-5wS" id="98r-iN-zZc"/>
-                        </connections>
-                    </window>
-                    <connections>
-                        <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="cq2-FE-JQM"/>
-                    </connections>
-                </windowController>
-                <customObject id="Oky-zY-oP4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="75" y="250"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="hIz-AP-VOD">
-            <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </view>
-                </viewController>
-                <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="75" y="655"/>
-        </scene>
     </scenes>
+    <resources>
+        <image name="ic_train" width="27" height="27"/>
+    </resources>
 </document>
